--- a/a1/styles.css
+++ b/a1/styles.css
@@ -1,5 +1,6 @@
 html {
     width: 100%;
+    height: 100%;
     min-width: 860px;
     background-color: #d3d3d3;
 }
@@ -8,13 +9,17 @@ body {
     width: 860px;
     margin: auto;
     background-color: #ffffff;
+    font-family: Verdana, sans-serif;
 }
 .title {
+    color: white;
     font-family: Georgia, serif;
     font-size: 25px;
+    padding: 10px;
 }
 .title-container {
-    width: 95%;
+    background-color: #254252;
+    width: 100%;
     margin: auto;
 }
 .step {
@@ -29,7 +34,7 @@ body {
 .ingredient {
 
 }
-#ingredient-list {
+#ingredient-container {
     border: 1px #d3d3d3;
 
 
