--- a/a1/styles.css
+++ b/a1/styles.css
@@ -1,6 +1,6 @@
 html {
     width: 100%;
-    height: 100%;
+    height: 120%;
     min-width: 860px;
     background-color: #d3d3d3;
 
@@ -28,7 +28,6 @@ body {
 .title-container {
     background-color: #254252;
     width: 100%;
-    //margin-left: -10px;
     margin-top: -10px;
 }
 #step-title {
@@ -37,10 +36,10 @@ body {
     font-size: 20px;
 }
 .step {
-
+    padding-bottom: 10px;
 }
 .main-container {
-    height: 90%;
+    height: 85%;
     width: 860px;
     margin: auto;
     background-color: white;
@@ -48,8 +47,8 @@ body {
 }
 .content-container {
     padding: 10px;
-
 }
+
 .col-2 {
     float: left;
     height: 100%;
@@ -111,7 +110,6 @@ body {
     float: left;
     width: 200px;
     height: auto;
-    filter: gray; /* IE6-9 */
     filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
     -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
 
