--- a/a1/styles.css
+++ b/a1/styles.css
@@ -8,7 +8,7 @@ html {
 body {
     height: 120%;
     width: 100%;
-    background-color: lightgrey;
+    background-color: #d3d3d3;
     background-image: -webkit-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
     background-image: -moz-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
     background-image: -o-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
@@ -19,7 +19,7 @@ body {
 }
 .title {
     font-family: Georgia, serif;
-    color: white;
+    color: #ffffff;
     padding: 10px;
     padding-left: 100px;
     font-size: 25px;
@@ -42,7 +42,7 @@ body {
     height: 85%;
     width: 860px;
     margin: auto;
-    background-color: white;
+    background-color: #ffffff;
     font-family: Verdana, sans-serif;
 }
 .content-container {
@@ -54,7 +54,7 @@ body {
     height: 100%;
     width: 16%;
     padding: 10px;
-    border-left: solid lightgrey;
+    border-left: solid #d3d3d3;
 }
 .col-4 {
     float: left;
@@ -82,7 +82,7 @@ body {
 }
 .ingredient-container {
     width: 100%;
-    border: solid 1px lightgrey;
+    border: solid 1px #d3d3d3;
     float: left;
 }
 .ingredient-container li {
@@ -125,5 +125,5 @@ body {
 #main-pic {
     width: 100%;
     height: auto;
-    border: solid 1px lightgrey;
+    border: solid 1px #d3d3d3;
 }
