--- a/a2/style.css
+++ b/a2/style.css
@@ -9,7 +9,8 @@ body {
 #gameboard, #p1-view, #fire-view, #fleet-view, #ship-view, #command-view, #output-view {
     margin: auto;
 }
-#gameboard, #p1-view, .map-square, .fire-standby, .fire-ready, #fleet-view, .ship, .command, #output-view, #output-view {
+#gameboard, #p1-view, .map-square, .fire-standby, .fire-ready, #fleet-view,
+    .ship, .command, #output-view, #output-view {
    // border: solid lightgray 1px;
      border: solid lawngreen 1px;
 }
@@ -25,7 +26,6 @@ body {
 }
 #map-panel {
     width: 700px;
-    //border: solid lightgray 1px;
 }
 #map-view, #p1-view, .map-row {
     width: auto;
