--- a/a2/style.css
+++ b/a2/style.css
@@ -29,7 +29,7 @@ a {
 h2, h3, h4, h6{
     margin: auto;
 }
-#gameboard, #p1-view, .map-square, .fire-standby, #fleet-view,
+#gameboard, #p1-view, .map-square, .title, #fleet-view,
     .ship-button, .command, #output-view, #output-view, #output-header, .ship-sunk {
      border: solid lawngreen 1px;
 }
@@ -85,17 +85,17 @@ h2, h3, h4, h6{
     text-align: center;
     font-size: 70px;
 }
-.fire-standby, h2, .ship-button, .ship-sunk, #output-view, .map-square-selected,
+.title, h2, .ship-button, .ship-sunk, #output-view, .map-square-selected,
 .command-button-active:hover, .ship-sunk {
     color: lawngreen;
 }
 .command-button-active, .ship-button, .map-square {
     cursor: pointer;
 }
-.fire-standby:hover, .fire-ready {
+.title:hover {
     color: white;
 }
-.fire-standby:hover, .map-square:hover {
+.title:hover, .map-square:hover {
     border: solid red 1px;
 }
 #fleet-view, #output-view {
@@ -107,7 +107,6 @@ h2, h3, h4, h6{
 #ship-view, #command-view {
     height: 240px;
     width: 49%;
-    //margin-top: 30px;
 }
 .ship-button, .ship-sunk{
     margin: 12px auto 0 auto;
@@ -143,7 +142,7 @@ h2, h3, h4, h6{
 .miss {
     background-color: purple;
 }
-.map-square:hover, .hit, .ship-sunk, .fire-standby:hover {
+.map-square:hover, .hit, .ship-sunk, .title:hover {
     background-color: red;
 }
 ::-webkit-scrollbar {
